--- a/app/src/main/res/layout/activity_list_jardin.xml
+++ b/app/src/main/res/layout/activity_list_jardin.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListJardinActivity">
+    tools:context=".list.ListJardinActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/jardin_recycler_view"
