--- a/jardin/src/main/res/layout/fragment_detail.xml
+++ b/jardin/src/main/res/layout/fragment_detail.xml
@@ -91,6 +91,21 @@
             app:layout_constraintStart_toEndOf="@+id/label_puntuacion_text_view"
             app:layout_constraintTop_toBottomOf="@+id/informacion_text_view" />
 
+        <ImageButton
+            android:id="@+id/mapButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:minHeight="48dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/puntuacion_text_view"
+            app:srcCompat="@drawable/ic_map"
+            tools:ignore="SpeakableTextPresentCheck"
+            android:contentDescription="@null" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
