--- a/jardin/src/main/res/navigation/mobile_navigation.xml
+++ b/jardin/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_list"
-        android:name="com.karendamore.jardin.list.ListFragment"
+        android:name="com.karendamore.jardin.ui.list.ListFragment"
         android:label="@string/title_list"
         tools:layout="@layout/fragment_list" >
         <action
@@ -19,7 +19,7 @@
     </fragment>
     <fragment
         android:id="@+id/navigation_detail"
-        android:name="com.karendamore.jardin.detail.DetailFragment"
+        android:name="com.karendamore.jardin.ui.detail.DetailFragment"
         android:label="@string/title_detail"
         tools:layout="@layout/fragment_detail">
         <argument
@@ -31,11 +31,11 @@
     </fragment>
     <fragment
         android:id="@+id/navigation_preference"
-        android:name="com.karendamore.jardin.preference.SettingsFragment"
+        android:name="com.karendamore.jardin.ui.preference.SettingsFragment"
         android:label="@string/title_preference" />
     <fragment
         android:id="@+id/mapsFragment"
-        android:name="com.karendamore.jardin.maps.MapsFragment"
+        android:name="com.karendamore.jardin.ui.bottom.maps.MapsFragment"
         android:label="fragment_maps"
         tools:layout="@layout/fragment_maps" />
 </navigation>
