--- a/jardin/src/main/res/layout/card_view_jardin_item.xml
+++ b/jardin/src/main/res/layout/card_view_jardin_item.xml
@@ -68,10 +68,22 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
                 android:text="@string/puntuacion_iglesia"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/label2_puntuacion_text_view"
+                app:layout_constraintTop_toBottomOf="@+id/descripcion_text_view" />
+
+            <TextView
+                android:id="@+id/label2_puntuacion_text_view"
+                style="@style/Texto_normal2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:text="@string/puntuacion"
                 app:layout_constraintStart_toEndOf="@+id/picture_image_view"
                 app:layout_constraintTop_toBottomOf="@+id/descripcion_text_view" />
         </androidx.constraintlayout.widget.ConstraintLayout>
